# socrates-env

./: .gitignore  BLOG_POST.md  DEMO_GUIDE.md  HF_SPACE_SETUP.md  SUBMISSION_CHECKLIST.md  TRAINING_CHECKLIST.md  app.py  hf_space_app.py  test_trained_model.py
socrates_env/: BLOG_POST.md  DEMO_EXAMPLE.md  DEMO_SCRIPT.md  README.md  SUBMISSION_CHECKLIST.md  __init__.py  audit_concepts.py  client.py  create_visualizations.py  generate_demo_artifacts.py  models.py  openenv.yaml  pyproject.toml  test_live.py  test_validation.py
socrates_env/concepts/: boolean_operators.json  floating_point.json  index_zero.json  integer_division.json  modulo_negative.json  mutable_defaults.json  pass_by_reference.json  recursive_termination.json
socrates_env/notebooks/: SocratesTraining.ipynb
socrates_env/results/: RESULTS_SUMMARY.md  baseline_results.json  example_baseline_dialogue.txt  example_trained_dialogue.txt  metrics_summary.json
socrates_env/server/: Dockerfile  __init__.py  app.py  concepts.py  curriculum.py  environment.py  requirements.txt  rewards.py  student.py
socrates_env/training/: __init__.py  baseline_eval.py  config.py  rollout.py  train_grpo.py  train_simple.py
